--- a/Homepage.html
+++ b/Homepage.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="icon" href="/image/BeeLogo1.png">
-  <link rel="stylesheet" href="Homepages.css">
+  <link rel="stylesheet" href="indexs.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="Homepages.css">
+    <link rel="stylesheet" href="indexs.css">
 
 
 </head>
@@ -19,13 +19,13 @@
 
   <nav class="navbar">
     <div class="menu">
-      <a href="Homepage.html"><img src="image/BeeLogo.png" class="logo"></a>
+      <a href="index.html"><img src="image/BeeLogo.png" class="logo"></a>
       <div class="title">
-        <a href="Homepage.html">Bee Bugoy's Frozen Meat Shop</a>
+        <a href="index.html">Bee Bugoy's Frozen Meat Shop</a>
       </div>
 
       <ul class="navtabs">
-        <li><a href="Homepage.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="Products.html">Shop</a></li>
         <li><a href="#footer">About Us</a></li>
         
