--- a/Checkout.html
+++ b/Checkout.html
@@ -20,13 +20,13 @@
 	
   <nav class="navbar">
     <div class="menu">
-      <a href="Homepage.html"><img src="image/BeeLogo.png" class="logo"></a>
+      <a href="index.html"><img src="image/BeeLogo.png" class="logo"></a>
       <div class="title">
-        <a href="Homepage.html">Bee Bugoy's Frozen Meat Shop</a>
+        <a href="index.html">Bee Bugoy's Frozen Meat Shop</a>
       </div>
 
       <ul class="navtabs">
-        <li><a href="Homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Products.html" class="active">Shop</a></li>
         <li><a href="#footer">About Us</a></li>
 
