--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="title">From Small to Everything</div>
     <div class="sub_title">Meat Can Fly</div>
     <div class="btns">
-      <button class="button"><a href="products.html">Order Now</a></button>
+      <button class="button"><a href="Products.html">Order Now</a></button>
       <button class="button"><a href="#footer">Inquire Now</a></button>
     </div>
   </div>
